--- a/index.html
+++ b/index.html
@@ -245,6 +245,160 @@
       </div>
     </section>
 
+    <!-- Special Price -->
+    <section id="special-price">
+      <div class="container">
+        <h4 class="font-rubik font-size-20">Special Price</h4>
+        <div id="filters" class="button-group text-right font-baloo font-size-16">
+          <button class="btn is-checked" data-filter="*">All Brand</button>
+          <button class="btn" data-filter=".Apple">Apple</button>
+          <button class="btn" data-filter=".Samsung">Samsung</button>
+          <button class="btn" data-filter=".Redmi">Redmi</button>
+        </div>
+
+        <div class="grid">
+          <div class="grid-item Apple border">
+            <div class="item py-2">
+              <div class="product font-rale">
+                <a href="#">
+                  <img src="./assets/products/13.png" alt="product1" class="img-fluid">
+                </a>
+                <div class="text-center">
+                  <h6>Apple iPhone 10</h6>
+                  <button type="submit" class="btn btn-warning font-size-12">Add to Cart</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-item Samsung border">
+            <div class="item py-2">
+              <div class="product font-rale">
+                <a href="#">
+                  <img src="./assets/products/11.png" alt="product1" class="img-fluid">
+                </a>
+                <div class="text-center">
+                  <h6>Samsung Galaxy 10</h6>
+                  <button type="submit" class="btn btn-warning font-size-12">Add to Cart</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-item Redmi border">
+            <div class="item py-2">
+              <div class="product font-rale">
+                <a href="#">
+                  <img src="./assets/products/3.png" alt="product1" class="img-fluid">
+                </a>
+                <div class="text-center">
+                  <h6>Redmi Note 7 Pro</h6>
+                  <button type="submit" class="btn btn-warning font-size-12">Add to Cart</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-item Apple border">
+            <div class="item py-2">
+              <div class="product font-rale">
+                <a href="#">
+                  <img src="./assets/products/14.png" alt="product1" class="img-fluid">
+                </a>
+                <div class="text-center">
+                  <h6>Apple iPhone 10</h6>
+                  <button type="submit" class="btn btn-warning font-size-12">Add to Cart</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-item Samsung border">
+            <div class="item py-2">
+              <div class="product font-rale">
+                <a href="#">
+                  <img src="./assets/products/12.png" alt="product1" class="img-fluid">
+                </a>
+                <div class="text-center">
+                  <h6>Samsung Galaxy 10</h6>
+                  <button type="submit" class="btn btn-warning font-size-12">Add to Cart</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-item Redmi border">
+            <div class="item py-2">
+              <div class="product font-rale">
+                <div class="d-flex flex-column">
+                  <a href="#">
+                    <img src="./assets/products/4.png" class="img-fluid" alt="pro1">
+                  </a>
+                  <div class="text-center">
+                    <h6>Redmi Note 7 Pro</h6>
+                    <button type="submit" class="btn btn-warning font-size-12">Add to Cart</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-item Redmi border">
+            <div class="item py-2">
+              <div class="product font-rale">
+                <div class="d-flex flex-column">
+                  <a href="#"><img src="./assets/products/5.png" class="img-fluid" alt="pro1"></a>
+                  <div class="text-center">
+                    <h6>Redmi Note 7 Pro</h6>
+                    <button type="submit" class="btn btn-warning font-size-12">Add to Cart</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-item Redmi border">
+            <div class="item py-2">
+              <div class="product font-rale">
+                <div class="d-flex flex-column">
+                  <a href="#">
+                    <img src="./assets/products/6.png" class="img-fluid" alt="pro1">
+                  </a>
+                  <div class="text-center">
+                    <h6>Redmi Note 7 Pro</h6>
+                    <button type="submit" class="btn btn-warning font-size-12">Add to Cart</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-item  Redmi border">
+            <div class="item py-2">
+              <div class="product font-rale">
+                <div class="d-flex flex-column">
+                  <a href="#">
+                    <img src="./assets/products/10.png" class="img-fluid" alt="pro1">
+                  </a>
+                  <div class="text-center">
+                    <h6>Redmi Note 7 Pro</h6>
+                    <button type="submit" class="btn btn-warning font-size-12">Add to Cart</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-item Apple border" >
+            <div class="item py-2">
+              <div class="product font-rale">
+                <div class="d-flex flex-column">
+                  <a href="#">
+                    <img src="./assets/products/13.png" class="img-fluid" alt="pro1">
+                  </a>
+                  <div class="text-center">
+                    <h6>Apple iPhone 10</h6>
+                    <button type="submit" class="btn btn-warning font-size-12">Add to Cart</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -253,6 +407,9 @@
   
   <!-- Owl Carousel Js file -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha256-pTxD+DSzIwmwhOqTFN+DB+nHjO4iAsbgfyFq5K5bcE0=" crossorigin="anonymous"></script>
+
+  <!--  isotope plugin -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js" integrity="sha256-CBrpuqrMhXwcLLUd5tvQ4euBHCdh7wGlDfNz8vbu/iI=" crossorigin="anonymous"></script>
 
   <!-- Custom Javascript -->
   <script src="./index.js"></script>
