--- a/index.html
+++ b/index.html
@@ -399,6 +399,14 @@
       </div>
     </section>
 
+    <!-- Banner Ads -->
+    <section id="banner-ads">
+      <div class="container py-5 text-center">
+        <img src="./assets/banner1-cr-500x150.jpg" alt="banner1" class="img-fluid">
+        <img src="./assets/banner2-cr-500x150.jpg" alt="banner1" class="img-fluid">
+      </div>
+    </section>
+
   </main>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
