--- a/index.html
+++ b/index.html
@@ -407,6 +407,41 @@
       </div>
     </section>
 
+    <!-- Blogs -->
+    <section id="blogs">
+      <div class="container py-4">
+        <h4 class="font-rubik font-size-20">Latest Blogs</h4>
+        <hr>
+
+        <div class="owl-carousel owl-theme">
+          <div class="item">
+            <div class="card border-0 font-rale mr-5">
+              <h5 class="card-title font-size-16">Upcoming Mobiles</h5>
+              <img src="./assets/blog/blog1.jpg" alt="cart image" class="card-img-top">
+              <p class="card-text font-size-14 text-black-50 py-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis non iste sequi cupiditate tempora iure. Velit accusamus saepe harum sed.</p>
+              <a href="#" class="color-second text-left">Go somewhere</a>
+            </div>
+          </div>
+          <div class="item">
+            <div class="card border-0 font-rale mr-5">
+              <h5 class="card-title font-size-16">Upcoming Mobiles</h5>
+              <img src="./assets/blog/blog2.jpg" alt="cart image" class="card-img-top">
+              <p class="card-text font-size-14 text-black-50 py-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis non iste sequi cupiditate tempora iure. Velit accusamus saepe harum sed.</p>
+              <a href="#" class="color-second text-left">Go somewhere</a>
+            </div>
+          </div>
+          <div class="item">
+            <div class="card border-0 font-rale mr-5">
+              <h5 class="card-title font-size-16">Upcoming Mobiles</h5>
+              <img src="./assets/blog/blog3.jpg" alt="cart image" class="card-img-top">
+              <p class="card-text font-size-14 text-black-50 py-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis non iste sequi cupiditate tempora iure. Velit accusamus saepe harum sed.</p>
+              <a href="#" class="color-second text-left">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
