--- a/cart.html
+++ b/cart.html
@@ -95,11 +95,11 @@
                 </div>
                 <div class="qty d-flex pt-2">
                   <div class="d-flex font-rale w-25">
-                    <button class="qty-up border bg-light">
+                    <button class="qty-up border bg-light" data-id="pro1">
                       <i class="fas fa-angle-up"></i>
                     </button>
-                    <input type="text" class="qty_input border px-2 w-100 bg-light" disabled value="1" placeholder="1">
-                    <button class="qty-down border bg-light">
+                    <input type="text" data-id="pro1" class="qty_input border px-2 w-100 bg-light" disabled value="1" placeholder="1">
+                    <button class="qty-down border bg-light" data-id="pro1">
                       <i class="fas fa-angle-down"></i>
                     </button>
                   </div>
